fix button alignment mobile navbar

--- a/src/styles/home/index_small.css
+++ b/src/styles/home/index_small.css
@@ -149,7 +149,8 @@ body {
 }
 
 nav ul li a button {
-    margin-top: 0;
+    margin-top: 0.5rem;
+    margin-right: 1.5rem;
     padding: 0.5rem 1rem;
 }
 
@@ -163,10 +164,6 @@ nav ul {
     display: flex;
     justify-content: center;
     float: right;
-}
-
-nav ul li a {
-    margin-right: 1rem;
 }
 
 #home-link {
